--- a/index.html
+++ b/index.html
@@ -12,4 +12,8 @@ layout: default
   {% include skills.html %}
   {% include footer.html %}
   {% include top-button.html %}
+  <!-- including google analytics -->
+  {% if site.google_analytics and jekyll.environment == 'production' %}
+  {% include analytics.html %}
+  {% endif %}
 </div>
